stopped the video from overflowing on mobile devices

--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ body{
   
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .hamburger-icon {
   display: block;
   overflow: hidden;
